Fix(*) revision fixes

--- a/templates/pages/custom/product/product-the-loop.html
+++ b/templates/pages/custom/product/product-the-loop.html
@@ -24,10 +24,14 @@ limit: {{theme_settings.productpage_similar_by_views_count}}
             </ul>
         </div>
         <div id="overview" class="row loop--intro">
-            <h1 class="strong">{{product.title}}</h1>
+            <h1 class="strong">NJOY LOOP</h1>
             <div class="col-4 description">
                 <p class="">
-                    Meet NJOY Loop – a revolutionary product that ensures you will never run out of vape. The sleek, handcrafted battery charging pack comes with 2 rechargeable vaporizers and features an advanced nicotine delivery system that hits hard and stays strong, all day long. One stays charged, while one is in use. Meet the future of vaping.
+                    There is finally a rechargeable E-cig that can keep pace with your on-the-go-lifestyle. <br><br>
+                    Loop features a sleek charging case and 2 battery sticks, one stick charges while the other is in use, ensuring you're never without battery.
+                    <br><br>
+                    Loop's advanced nicotine delivery syetm delivers a consistently strong hit all day long. <br><br>
+                    with Njoy loop you've got an endless pack of smokes in your pocket.
                     <br>
                     <a href="#" data-reveal-id="loopOfferModal">Click for special pre-order pricing. </a>
                 </p>
@@ -79,7 +83,7 @@ limit: {{theme_settings.productpage_similar_by_views_count}}
                                 </div>
                                 <div style="font-size: 12px; font-weight: bold">
                                     <p>Includes:&nbsp;</p>
-                                    <p>(1) NJOY Loop Battery Pack</p>
+                                    <p>(1) NJOY Loop Device</p>
                                     <p>Your choice of Flavor Pods (Pack of 2)</p>
                                 </div>
                                 <div class="inline">
@@ -120,15 +124,12 @@ limit: {{theme_settings.productpage_similar_by_views_count}}
             <h1 class="title">
                 What's in the box
             </h1>
-            <h4 class="subtitle">
-                - Loop Pods sold separately -
-            </h4>
             <div class="images row">
                 <div class="card col-3" id="showPopOne">
                     <figure id="galleryOne">
                         <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/186/images/527/GRAY_sticks_1__17780.1530650543.1280.1280.png"
                              alt="picture one">
-                        <figcaption>2 Rechargeable Vaporizers </figcaption>
+                        <figcaption>2 Battery Sticks </figcaption>
                     </figure>
                 </div>
                 <div id="showPopTwo" class="card col-3">
@@ -164,7 +165,7 @@ limit: {{theme_settings.productpage_similar_by_views_count}}
                                  alt="picture one">
                         </div>
                         <div class="description col-12">
-                            <h3>2 Rechargeable Vaporizers </h3>
+                            <h3>2 Battery Sticks </h3>
                             <h4>So you never have to worry about running out of battery.</h4>
                         </div>
                     </div>
@@ -172,7 +173,7 @@ limit: {{theme_settings.productpage_similar_by_views_count}}
                 <div class="card row">
                     <div class="">
                         <div class="image col-12">
-                            <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/193/images/542/pack__62908.1531239229.1280.1280.png"
+                            <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/193/images/551/box__59455.1531514559.1280.1280.png"
                                  alt="picture one">
                         </div>
                         <div class="description col-12">
@@ -184,7 +185,7 @@ limit: {{theme_settings.productpage_similar_by_views_count}}
                 <div class="card row">
                     <div class="">
                         <div class="image col-12">
-                            <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/193/images/543/charge-a__86590.1531239462.1280.1280.png"
+                            <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/193/images/549/usb__38632.1531514559.1280.1280.png"
                                  alt="picture one">
                         </div>
                         <div class="description col-12">
@@ -196,7 +197,7 @@ limit: {{theme_settings.productpage_similar_by_views_count}}
                 <div class="card row">
                     <div class="">
                         <div class="image col-12">
-                            <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/193/images/540/153116414966459852__11523.1531164222.1280.1280.jpg"
+                            <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/193/images/550/power__42358.1531514559.1280.1280.png"
                                  alt="picture one">
                         </div>
                         <div class="description col-12">
@@ -208,10 +209,9 @@ limit: {{theme_settings.productpage_similar_by_views_count}}
             </div>
         </div>
         <div id="specs" class="tech-specs">
-            <h1 class="title" style="text-align:center">Technical Specifications</h1>
+            <h1 class="title" style="text-align:center;  text-transform: uppercase">Technical Specifications</h1>
             <div class="row" style="font-size: 16px;">
-                <div class="col-1">&nbsp;</div>
-                <div class="col-3">
+                <div class="col-4">
                     <p><strong>Weight</strong></p>
                     <p>32.00 Ounces</p>
                     <p><strong>Materials</strong></p>
@@ -233,44 +233,35 @@ limit: {{theme_settings.productpage_similar_by_views_count}}
                     <p>Bottom light flashing RED = Low batter, please plug unit in.</p>
                 </div>
             </div>
+            <div class="row loop--slider_title">
+                <div class="col-12">
+                    <h1 class="title">An endless pack of <br> smokes in your pocket</h1>
+                </div>
+            </div>
             <div class="spec-slide">
                 <div class="row loop--specs">
-                    <div class="col-4 spec-title">
-                        <h1>Sleek Charging Case</h1>
-                    </div>
-                    <div class="col-7 spec-desc">
-                        <p class="description">
-                            Keep your sticks charged on the go. The Loop carrying case delivers 36 hours of dual-stick charging in a sleek device. No matter how much you use it, 1 stick is always ready to go.
-                        </p>
-                    </div>
-                    <div class="col-12 spec-image">
-                        <img src="{{cdn 'webdav:/img/loop-lifestyle/1.jpg'}}" alt="placeholder">
-                    </div>
-                </div>
-                <div class="row loop--specs">
-                    <div class="col-4 spec-title">
-                        <h1>Duelling Batteries</h1>
-                    </div>
-                    <div class="col-7 spec-desc">
-                        <p class="description">
-                            The cylinder-shaped battery sticks mirror the form of cigarettes, and are compatible with replaceable Loop Pods that come in many flavors. Switch, twist and enjoy.
-                        </p>
-                    </div>
                     <div class="col-12 spec-image">
                         <img src="{{cdn 'webdav:/img/loop-lifestyle/3.jpg'}}" alt="placeholder">
                     </div>
                 </div>
                 <div class="row loop--specs">
-                    <div class="col-4 spec-title">
-                        <h1>Packs A Punch</h1>
-                    </div>
-                    <div class="col-7 spec-desc">
-                        <p class="description">
-                            Loop hits like a cigarette and doesn't let up. With advanced nicotine delivery system it remains consistent even as the battery wanes.
-                        </p>
-                    </div>
                     <div class="col-12 spec-image">
                         <img src="{{cdn 'webdav:/img/loop-lifestyle/4.jpg'}}" alt="placeholder">
+                    </div>
+                </div>
+                <div class="row loop--specs">
+                    <div class="col-12 spec-image">
+                        <img src="{{cdn 'webdav:/img/loop-lifestyle/1.jpg'}}" alt="placeholder">
+                    </div>
+                </div>
+                <div class="row loop--specs">
+                    <div class="col-12 spec-image">
+                        <img src="{{cdn 'webdav:/img/loop-lifestyle/5.jpg'}}" alt="placeholder">
+                    </div>
+                </div>
+                <div class="row loop--specs">
+                    <div class="col-12 spec-image">
+                        <img src="{{cdn 'webdav:/img/loop-lifestyle/2.jpg'}}" alt="placeholder">
                     </div>
                 </div>
             </div>
@@ -279,7 +270,7 @@ limit: {{theme_settings.productpage_similar_by_views_count}}
             <h1 class="title">
                 Flavor Pods
             </h1>
-            <h4 class="subtitle"> Available in four delicious flavors you know & love from the NJOY Daily <!--<span class="green">Sold Separately.</span>--></h4>
+            <h4 class="subtitle"> Disposable pods available in four delicious flavors <!--<span class="green">Sold Separately.</span>--></h4>
             <div class="flavors row">
                 <a  class="col-3" href="/njoy-loop-cool-menthol-pods/">
                     <figure>
@@ -290,7 +281,7 @@ limit: {{theme_settings.productpage_similar_by_views_count}}
                 <a  class="col-3" href="/njoy-loop-blue-blackberry-pods/">
                     <figure>
                         <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/190/images/545/blackblue__35423.1531243741.1280.1280.png" alt="">
-                        <figcaption>Blue + Blackberry</figcaption>
+                        <figcaption>Blue + Black Berry</figcaption>
                     </figure>
                 </a>
                 <a  class="col-3" href="/njoy-loop-tropical-twist-pods/">
