--- a/assets/scss/custom/custom-the-loop.scss
+++ b/assets/scss/custom/custom-the-loop.scss
@@ -217,6 +217,7 @@
     position: relative;
     max-width: 100%;
     margin: auto;
+    margin-bottom: 10em;
     .image {
       text-align: center;
     }
@@ -228,14 +229,17 @@
       font-size: 2.3em;
       font-weight: 800;
       text-transform: uppercase;
+      letter-spacing: .4rem;
     }
     .description {
       padding-top: 2em;
-      font-size: 1.42em;
+      font-size: 1.22em;
       text-align: justify;
-      text-justify: inter-word;
+      /*text-justify: inter-word;*/
+      text-transform: uppercase;
       a {
         font-size: 16px;
+        text-transform: none;
         &:hover {
           color: blue;
           text-decoration: none;
@@ -280,6 +284,7 @@
   .loop--pod {
     max-width: 100%;
     margin: 80px 0;
+    margin-top: 10em;
     .flavors {
       .col-3 {
         margin: 0.5rem 1% !important;
@@ -319,11 +324,14 @@
     h1.title {
       font-weight: 600;
       font-size: 2.3em;
+      text-transform: uppercase;
+      letter-spacing: .4rem !important;
+      margin-bottom: 1em;
     }
     h4.subtitle {
       font-weight: 800;
-      font-style: italic;
-      font-size: 1.23em;
+      font-size: 1.43em;
+      text-transform: uppercase;
       margin-top: 0 !important;
     }
     .green{
@@ -339,6 +347,7 @@
     padding-top: 30px;
     height: 0;
     overflow: hidden;
+    margin-bottom: 10em;
     video {
       position: absolute;
       top: 0;
@@ -354,6 +363,7 @@
 
   }
   .loop--gallery {
+    margin-bottom: 10em;
     h1, h4 {
       text-align: center;
       text-transform: capitalize;
@@ -361,6 +371,8 @@
     h1.title {
       font-weight: 600;
       font-size: 2.3em;
+      letter-spacing: .4rem;
+      text-transform: uppercase;
     }
     h4.subtitle {
       font-weight: 800;
@@ -394,33 +406,26 @@
   }
   .loop--specs {
     position: relative;
-    max-width: 80%;
-    margin: 50px 2vw;
-    .spec-title {
+    max-width: 100%;
+    .title {
+      text-transform: uppercase;
+      text-align: center;
+      letter-spacing: .4rem !important;
+      margin: 1em 0 !important;
+    }
+    .spec-image {
       position: relative;
       top: 0;
       left: 0;
-      font-weight: bolder;
-      h1 {
-        font-size: 1.62em;
-        margin-top: 0 !important;
-        @media only screen and (max-width: $breakpoint-small) {
-          font-size: 1.82em;
-        }
-      }
-    }
-    .spec-desc {
-      font-size: 1.32em;
-      font-weight: 400;
-    }
-    .spec-image {
       text-align: center;
       max-width: 100%;
       max-height: 100%;
+      margin: 0.5rem 0 !important;
     }
   }
   .loop--slider{
     text-align: center;
+    margin-bottom: 10em;
     h1, h4 {
       text-align: center;
       text-transform: capitalize;
@@ -454,6 +459,14 @@
           font-weight: bolder;
         }
       }
+    }
+  }
+  .loop--slider_title {
+    .title {
+      text-transform: uppercase;
+      text-align: center;
+      letter-spacing: .4rem !important;
+      margin-bottom: 5em !important;
     }
   }
   // Page elements end
