Fix(*) All revisions done

--- a/templates/pages/custom/product/product-the-loop.html
+++ b/templates/pages/custom/product/product-the-loop.html
@@ -108,14 +108,15 @@ limit: {{theme_settings.productpage_similar_by_views_count}}
         </div>
         <div id="video" class="row loop--video">
             <div class="col-12">
-                <video controls="true"
+                <iframe width="972" height="550" src="https://www.youtube.com/embed/2fMaI7tPoS8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                <!--<video controls="true"
                        width="900"
                        height="450"
                        poster="{{cdn 'webdav:/NJOY_loop_poster.png'}}">
                     <source src="assets/img/njoy_final.webm" type="video/webm">
                     <source src="{{cdn 'webdav:/njoy_final.mp4'}}" type="video/mp4">
                     Sorry, your browser doesn't support embedded videos.
-                </video>
+                </video>-->
                 <!--<object class="vid" data="https://www.youtube.com/embed/cLtRhVpwOgA"
                         width="650" height="400"></object>-->
             </div>
@@ -278,7 +279,7 @@ limit: {{theme_settings.productpage_similar_by_views_count}}
                         <figcaption> Cool Menthol</figcaption>
                     </figure>
                 </a>
-                <a  class="col-3" href="/njoy-loop-blue-blackberry-pods/">
+                <a  class="col-3" href="/njoy-loop-blue-black-berry-pods/">
                     <figure>
                         <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/190/images/545/blackblue__35423.1531243741.1280.1280.png" alt="">
                         <figcaption>Blue + Black Berry</figcaption>
@@ -314,7 +315,7 @@ limit: {{theme_settings.productpage_similar_by_views_count}}
 </div>
 <div id="loopOfferModal" class="modal modal--medium" data-reveal>
     <div class="modal-header">
-        <h2 class="modal-header-title">The Loop - Pre-Order Special Pricing</h2>
+        <h2 class="modal-header-title">Pre-Order Special Pricing</h2>
         <a href="#" class="modal-close" aria-label="Close"><span aria-hidden="true">&#215;</span></a>
     </div>
     <div class="modal-body">
