--- a/assets/scss/custom/custom-the-loop.scss
+++ b/assets/scss/custom/custom-the-loop.scss
@@ -343,23 +343,8 @@
     position: relative;
     max-width: 100%;
     margin: auto;
-    padding-bottom: 56.25%;
-    padding-top: 30px;
-    height: 0;
-    overflow: hidden;
+    text-align: center;
     margin-bottom: 10em;
-    video {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      &:after {
-          -webkit-box-sizing: content-box !important;
-          -moz-box-sizing: content-box !important;
-          box-sizing: content-box !important;
-      }
-    }
 
   }
   .loop--gallery {
@@ -499,4 +484,7 @@
 
 #loopOfferModal {
   top: 70% !important;
+  .modal-header-title {
+    text-transform: uppercase;
+  }
 }
