--- a/assets/scss/custom/custom-the-loop.scss
+++ b/assets/scss/custom/custom-the-loop.scss
@@ -1,10 +1,10 @@
 .the-loop{
   // utility
   margin-top: -15em;
-  @include breakpoint("large") {
+  @include breakpoint($large-only) {
     margin-top: -10em;
   }
-  @include breakpoint("medium") {
+  @include breakpoint($medium-only) {
     margin-top: -25em;
   }
 
@@ -192,7 +192,7 @@
         margin-left: 15px;
         padding: 5px 0;
         cursor: pointer;
-        @include breakpoint("small") {
+        @include breakpoint($small-only) {
           text-align: left;
           margin-left: 10px;
           display: inline-block;
@@ -385,7 +385,7 @@
       }
     }
 
-    @include breakpoint("medium") {
+    @include breakpoint($medium-only) {
       display: none;
     }
   }
@@ -471,7 +471,7 @@
   }
 }
 
-@include breakpoint("small") {
+@include breakpoint($small-only) {
   .slick_prev,
   .slick-next {
     display: none !important;
