--- a/assets/scss/custom/nicotine-warning.scss
+++ b/assets/scss/custom/nicotine-warning.scss
@@ -10,36 +10,30 @@
   padding-top: calc(7rem + 20vh);
 }
 
-.heroCarousel {
-  padding-top: 20vh;
-}
-
 .nicotineWarning {
   background: #fff;
-  box-sizing: border-box;
-  font-family: Helvetica, Arial, sans-serif;
-  font-weight: bold;
   position: fixed;
   top: 0;
   left: 0;
-  width: calc(100% - 20px);
-  height: calc(20vh - 20px);
+  width: 100%;
+  height: 20vh;
 
-  margin: 10px;
-  border: 10px solid #000;
+  border: 7px solid #000;
+  border-left: 0;
+  border-right: 0;
 
   padding: 0 5%;
   z-index: 10000;
 }
 
 .nicotineWarning__inner {
-  font-size: 22px;
-  margin-top: calc(10vh - 20px);
+  font-size: 15px;
+  margin-top: 10vh;
   text-align: center;
   transform: translateY(-50%);
 
   @include breakpoint("small") {
-    font-size: 30px;
+    font-size: 25px;
   }
 
 }
