Fix(*) Vimeo video and nicotine banner

--- a/templates/pages/custom/product/product-the-loop.html
+++ b/templates/pages/custom/product/product-the-loop.html
@@ -83,7 +83,7 @@ limit: {{theme_settings.productpage_similar_by_views_count}}
                                 </div>
                                 <div style="font-size: 12px; font-weight: bold">
                                     <p>Includes:&nbsp;</p>
-                                    <p>(1) NJOY Loop Device</p>
+                                    <p>(1) NJOY LOOP DEVICE</p>
                                     <p>Your choice of Flavor Pods (Pack of 2)</p>
                                 </div>
                                 <div class="inline">
@@ -108,7 +108,7 @@ limit: {{theme_settings.productpage_similar_by_views_count}}
         </div>
         <div id="video" class="row loop--video">
             <div class="col-12">
-                <iframe width="972" height="550" src="https://www.youtube.com/embed/2fMaI7tPoS8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                <iframe width="972" height="550" src="https://vimeo.com/280264069/fe47276d4c" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
             </div>
         </div>
         <div class="hide-on-mobile row loop--gallery">
@@ -226,7 +226,7 @@ limit: {{theme_settings.productpage_similar_by_views_count}}
             </div>
             <div class="row loop--slider_title">
                 <div class="col-12">
-                    <h1 class="title">An endless pack of <br> smokes in your pocket</h1>
+                    <h1 class="title" style="font-weight: bolder">An endless pack of <br> smokes in your pocket</h1>
                 </div>
             </div>
             <div class="spec-slide">
