Fix(*) Final revision fixes

--- a/templates/pages/custom/product/product-the-loop.html
+++ b/templates/pages/custom/product/product-the-loop.html
@@ -27,13 +27,15 @@ limit: {{theme_settings.productpage_similar_by_views_count}}
             <h1 class="strong">NJOY LOOP</h1>
             <div class="col-4 description">
                 <p class="">
-                    There is finally a rechargeable E-cig that can keep pace with your on-the-go-lifestyle. <br><br>
-                    Loop features a sleek charging case and 2 battery sticks, one stick charges while the other is in use, ensuring you're never without battery.
+                    There’s finally a rechargeable e-cig that can keep pace with your on-the-go lifestyle. <br><br>
+                    Loop features two battery sticks and a sleek charging case that provides 24 hours of continuous power.
                     <br><br>
-                    Loop's advanced nicotine delivery syetm delivers a consistently strong hit all day long. <br><br>
-                    with Njoy loop you've got an endless pack of smokes in your pocket.
-                    <br>
-                    <a href="#" data-reveal-id="loopOfferModal">Click for special pre-order pricing. </a>
+                    The two sticks allow you to easily switch between flavors, doubling your vaping pleasure. <br><br>
+                    Loop’s Advanced Nicotine Delivery System gives you a consistently strong hit all day and all night. <br><br>
+                    NJOY Loop. <br>
+                    <strong>Like an endless pack of smokes in your pocket.</strong>
+                    <br><br>
+                    <a href="#" data-reveal-id="loopOfferModal">Click for special pricing. </a>
                 </p>
             </div>
             <div class="col-3 image" >
@@ -82,8 +84,8 @@ limit: {{theme_settings.productpage_similar_by_views_count}}
                                     </div>
                                 </div>
                                 <div style="font-size: 12px; font-weight: bold">
-                                    <p>Includes:&nbsp;</p>
-                                    <p>(1) NJOY LOOP DEVICE</p>
+                                    <p>NJOY LOOP STARTER KIT INCLUDES&nbsp: </p>
+                                    <p>1 LOOP DEVICE</p>
                                     <p>Your choice of Flavor Pods (Pack of 2)</p>
                                 </div>
                                 <div class="inline">
@@ -108,7 +110,7 @@ limit: {{theme_settings.productpage_similar_by_views_count}}
         </div>
         <div id="video" class="row loop--video">
             <div class="col-12">
-                <iframe width="972" height="550" src="https://vimeo.com/280264069/fe47276d4c" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                <iframe width="972" height="550" src="https://www.youtube.com/embed/2fMaI7tPoS8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
             </div>
         </div>
         <div class="hide-on-mobile row loop--gallery">
@@ -116,21 +118,21 @@ limit: {{theme_settings.productpage_similar_by_views_count}}
                 What's in the box
             </h1>
             <div class="images row">
-                <div class="card col-3" id="showPopOne">
+                <div class="card col-3 smaller">
                     <figure id="galleryOne">
                         <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/186/images/527/GRAY_sticks_1__17780.1530650543.1280.1280.png"
                              alt="picture one">
                         <figcaption>2 Battery Sticks </figcaption>
                     </figure>
                 </div>
-                <div id="showPopTwo" class="card col-3">
+                <div class="card col-3">
                     <figure id="galleryTwo">
                         <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/193/images/551/box__59455.1531514559.1280.1280.png"
                              alt="picture one">
                         <figcaption>Sleek charging case</figcaption>
                     </figure>
                 </div>
-                <div id="showPopThree" class="card col-3">
+                <div class="card col-3">
                     <figure id="galleryThree">
                         <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/193/images/549/usb__38632.1531514559.1280.1280.png"
                              alt="picture one">
@@ -138,7 +140,7 @@ limit: {{theme_settings.productpage_similar_by_views_count}}
 
                     </figure>
                 </div>
-                <div id="showPopFour" class="card col-3">
+                <div class="card col-3">
                     <figure id="galleryFour">
                         <img src="https://cdn8.bigcommerce.com/s-41vy970mga/products/193/images/550/power__42358.1531514559.1280.1280.png"
                              alt="picture one">
@@ -218,15 +220,15 @@ limit: {{theme_settings.productpage_similar_by_views_count}}
                 </div>
                 <div class="col-4">
                     <p><strong>Charging Requirements / Instructions:</strong></p>
-                    <p>USBc charger included.</p>
+                    <p>USBc charger included</p>
                     <p>Bottom light flashing GREEN = Fully Charged</p>
                     <p>Bottom light flashing BLUE = Medium battery life</p>
-                    <p>Bottom light flashing RED = Low batter, please plug unit in.</p>
+                    <p>Bottom light flashing RED = Low battery, please plug unit in.</p>
                 </div>
             </div>
             <div class="row loop--slider_title">
                 <div class="col-12">
-                    <h1 class="title" style="font-weight: bolder">An endless pack of <br> smokes in your pocket</h1>
+                    <h1 class="title" style="font-weight: bolder">Like An endless pack of <br> smokes in your pocket</h1>
                 </div>
             </div>
             <div class="spec-slide">
@@ -291,7 +293,7 @@ limit: {{theme_settings.productpage_similar_by_views_count}}
         </div>
     </div>
 </div>
-<div id="galleryPopOne" class="center" style="display: none;">
+<!--<div id="galleryPopOne" class="center" style="display: none;">
     <h3>So you never have to worry about running out of battery.</h3>
 </div>
 <div id="galleryPopTwo" class="center" style="display: none;">
@@ -302,10 +304,10 @@ limit: {{theme_settings.productpage_similar_by_views_count}}
 </div>
 <div id="galleryPopFour" class="center" style="display: none;">
     <h3>Rapid charging cable.</h3>
-</div>
+</div>-->
 <div id="loopOfferModal" class="modal modal--medium" data-reveal>
     <div class="modal-header">
-        <h2 class="modal-header-title">Pre-Order Special Pricing</h2>
+        <h2 class="modal-header-title">Special Pricing</h2>
         <a href="#" class="modal-close" aria-label="Close"><span aria-hidden="true">&#215;</span></a>
     </div>
     <div class="modal-body">
@@ -313,15 +315,15 @@ limit: {{theme_settings.productpage_similar_by_views_count}}
             <div class="">
                 <div class="">
                     <div class="offer">
-                        <p>As part of our special introductory Loop pre-order , we’re offering special VIP pricing:</p>
+                        <p>As part of our special introductory Loop offer,  we’re offering special VIP pricing:</p>
                         <ul>
                             <li>First 250 Orders = 50% Off using coupon code <strong>TheLoopFirst</strong> at checkout</li>
                             <li>Next 250 Orders = 40% Off using coupon code <strong>TheLoopSecond</strong> at checkout</li>
-                            <li>Regular Pre-order Pricing = 20% off</li>
+                            <li>Base Special Pricing = 20% off</li>
                         </ul>
                     </div>
-                    <p><span>*</span>Pre-orders will be shipped in late August, your credit card will be charged upon order</p>
-                    <p><span>**</span>All Loop pre-orders come with our 30 day satisfaction guaranteed promise, once you receive it, if you are not completely satisfied, return it for a full refund</p>
+                    <p><span>*</span>Orders will be shipped in late August, your credit card will be charged upon order</p>
+                    <p><span>**</span>All Loop orders come with our 30 day satisfaction guaranteed promise. If you aren't completely satisfied with your Loop, return it within 30 days to get full refund.</p>
                 </div>
             </div>
         </div>
