--- a/assets/scss/custom/custom-the-loop.scss
+++ b/assets/scss/custom/custom-the-loop.scss
@@ -236,7 +236,6 @@
       font-size: 1.22em;
       text-align: justify;
       /*text-justify: inter-word;*/
-      text-transform: uppercase;
       a {
         font-size: 16px;
         text-transform: none;
@@ -348,7 +347,7 @@
 
   }
   .loop--gallery {
-    margin-bottom: 10em;
+    margin-bottom: 6em;
     h1, h4 {
       text-align: center;
       text-transform: capitalize;
@@ -371,6 +370,7 @@
         display: inline-flex;
         justify-content: space-evenly;
         margin-left: 2em;
+        height: 400px;
         img {
           max-width: 80%;
           max-height: 80%;
@@ -380,7 +380,13 @@
           font-size: 16px;
           font-weight: bolder;
           text-align: center;
-          text-transform: capitalize;
+          text-transform: uppercase;
+        }
+      }
+      .smaller {
+        img {
+          height: 60%;
+          width: 60%;
         }
       }
     }
