--- a/assets/scss/custom/nicotine-warning.scss
+++ b/assets/scss/custom/nicotine-warning.scss
@@ -11,6 +11,7 @@
 }
 
 .heroCarousel {
+  margin-top: 0;
   padding-top: 20vh;
 }
 
@@ -28,18 +29,35 @@
   margin: 10px;
   border: 10px solid #000;
 
-  padding: 0 5%;
+  padding: 0 2%;
   z-index: 10000;
 }
 
 .nicotineWarning__inner {
-  font-size: 4.5vw;
+  font-size: 3.25vw;
   margin-top: calc(10vh - 20px);
   text-align: center;
   transform: translateY(-50%);
 
-  @include breakpoint("large") {
-    font-size: 2.2vw;
+  @media only screen and (max-width: 1024px)
+  and (min-width: 377px) {
+    font-size: 30px;
   }
+
+  @media only screen and (min-width: 1600px) {
+    font-size: 55px;
+  }
+
+  @media only screen
+  and (max-device-width: 568px) {
+    font-size: 16px;
+  }
+
+  @media only screen
+    and (orientation: landscape)
+    and (max-device-width: 374px)
+    and (-webkit-min-device-pixel-ratio: 2) {
+      font-size: 13px;
+    }
 }
 
